--- a/introductioncss.html
+++ b/introductioncss.html
@@ -54,7 +54,22 @@
 
 
 <article>
-  
+<div class="introcss-main">
+  <div class="i-css">
+    <h3 id="ih3css">What is CSS ?</h3>
+    <img class="p-iccsimg" src="images/css3.png" alt="" >
+    <p class="p-icss">CSS allows you to create rules that specify how the content of an element should appear. For example, you can specify that the background of the page is cream, all paragraphs should appear in gray using the Arial typeface, or that all level one headings should be in a blue, italic, Times typeface.</p>
+    <p class="p-icss">CSS works by associating rules with HTML elements.These rules govern how the content of specified elements should be displayed. A CSS rule contains two parts: a <strong>selector</strong> and a <strong>declaration</strong>.</p>
+    <img class="p-iccsimg" src="images/cssselector.webp" alt="">
+    <p class="p-icss">CSS declarations sit inside curly brackets and each is made up of two parts: a <strong>property</strong> and a <strong>value</strong>, separated by a colon. You can specify several properties in one declaration, each separated by a semi-colon.</p>
+  </div><!--end of i-css-->
+  <div class="css-boxes">
+    <div class="intro-box1"></div>
+    <div class="intro-box2"></div>
+    <div class="intro-box3"></div>
+    <div class="intro-box4"></div>
+  </div>
+</div><!--end of introcss-main-->
 </article>
 </div><!--end of main-->
 </div><!--end of wrapper-->
